fix file overwriting bug